# simple-barber

./: .gitignore  LICENSE  README.md  middleware.ts  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
api/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
api/tests/: README.MD  test_db_services.py  test_db_slots.py
app/: database.py  globals.css  layout.tsx  login.tsx  main.py  models.py  page.tsx  schema.py
app/admin/[[...admin]]/: page.tsx
app/login/[[...login]]/: page.tsx
app/tests/: test_db.py
components/: Navbar.tsx
